Fri May 31 14:02:11 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/ETCL/ETCL_Constraint.inl:
          Fixed coverity warning

Thu May 30 18:50:44 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Malloc_Allocator.h:
        * ace/Shared_Memory_Pool.h:
          Doxygen changes

        * ace/Shared_Memory_Pool.cpp:
          Fixed Coverity 300041 Dereference after null check

Wed May 29 03:35:59 UTC 2013  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/Connector.h: Used reinterpret_cast<const
          peer_addr_type&>(peer_addr_type::sap_any) instead of C cast to
          avoid a warning when compiling with -Wcast-qual.  Thanks to
          Milan Cvetkovic <milan dot cvetkovic at mpathix dot com> for
          reporting this.

Wed May 29 13:57:15 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/auto_run_tests.pl:
        * tests/run_test.pl:
          Commented out setting of the Coverity environment variables
          seperately for each test, that looks to cause a huge additonal
          resource usage

Wed May 29 06:58:53 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-sunos5.7.h:
          Fixed possible redefinition warning

        * docs/ACE-development-process.html:
          Extended bczar instructions, updated link

        * tests/Compiler_Features_20_DLL.h:
        * tests/Compiler_Features_20_DLL.cpp:
        * tests/Compiler_Features_20_DLL_Export.h:
        * tests/tests.mpc:
          New C++11 compiler feature test

Tue May 28 09:12:20 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * docs/Download.html:
        * etc/index.html:
          Make x.2.0 links available to the public

Mon May 27 17:46:40 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * debian/libtao-orbsvcs-2.2.0.install:
        * debian/libtao-orbsvcs-dev.install:
          Added new libTAO_Async_ImR_Client_IDL
