@@ -1,3 +1,10 @@
+Wed Jun  5 20:09:59 UTC 2013  Phil Mesnier  <mesnier_p@ociweb.com>
+
+        * tests/FlReactor_Test.cpp:
+        * tests/QtReactor_Test.cpp:
+
+          Fixed wchar build compile errors
+
 Fri May 31 14:02:11 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * ace/ETCL/ETCL_Constraint.inl:
